# CPM.cu

./: .gitignore  CMakeLists.txt  READMD_ZH.md  README.md  README_ZH.md  requirements.txt  server.py  setup.py
cpmcu/: llm.py  llm_w4a16_gptq_marlin.py
evaluation/: eval.py  inference_baseline.py  inference_baseline_w4a16_gptq_marlin.py  inference_baseline_w4a8_qoq_chn.py  inference_baseline_w4a8_qoq_group.py  inference_baseline_w4a8_qqq.py  inference_baseline_w8a8.py  inference_eagle.py  inference_eagle3.py  inference_eagle_w4a16_gptq_marlin.py  inference_eagle_w4a8_qoq_chn_rot.py  inference_eagle_w4a8_qoq_group_rot.py  inference_eagle_w4a8_qqq_rot.py  inference_hier_eagle_w4a16_gm_spec_w4a16_gm.py  inference_medusa_base_w8a8.py  inference_spec_w4a16_gm_for_w4a16_gm.py  speed_mt_bench.py
llamacu/: llama.py  llama_latency.py  llama_w4a16.py  llama_w4a16_gptq_marlin.py  llama_w4a16_gptq_marlin_latency.py  llama_w4a16_marlin.py  llama_w4a8_per_chn.py  llama_w4a8_per_group.py  llama_w4a8_qqq.py  llama_w8a8.py  medusa.py  medusa_w4a8_per_chn.py  medusa_w8a8.py
model_convert/: convert_eagle_rotation.py  convert_transpose.py  convert_w4a16.py  convert_w4a8_qoq_group.py  convert_w4a8_qqq.py  convert_w4a8_qqq_group.py  post_process_w4a16_eagle.py
src/: entry.cu  entry_latency.cu  model.cu  perf.cu  perf.cuh  signal_handler.cu  signal_handler.cuh  trait.cuh  utils.cu  utils.cuh
tests/: bench_forward_time.py  debug.py  long_prompt_gen.py  test.py  test_generate.py  test_generate_cascade_eagle3_spec_w4a16_gptq_marlin_ea3_head.py  test_generate_std_w416.py  test_spec_model.py  (+25 more)
(+631 files in other folders)
